tests/src/frontend/typechecking/invalid/this_vs_classname_fail.sk
class Foo<T: frozen>() {
  static fun create(): Foo<T> {
    Foo()
  }
  static fun special<T: nonNullable>(): Foo<T> {
    static::create()
  }
}
